src/App.css
.App {
  & .Content {
    display: flex;
  }
}

.input {
  border: none;
  border-radius: 8px;
  background-color: #f2f2f2;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  height: 20px;
  font-size: 16px;
  color: #333;
  transition: all 0.3s ease-in-out;
}

.input:focus {
  outline: none;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
  background-color: #e6e6e6;
}

